dashboard and ciu

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -23,7 +23,7 @@
   text-align: center;
   border-bottom: 2px solid #01bceb;
   border-radius: 0px;
-  box-shadow: 0px 4px 3px 0px #acacac;
+  box-shadow: 0px 1px 10px 0px #acacac7d;
 }
 
 .wrap-mat-card h3 {
