--- a/src/app/sales-order/sales-order.component.css
+++ b/src/app/sales-order/sales-order.component.css
@@ -33,3 +33,13 @@ button.mat-sort-header-button
     margin: 0px 0px 30px;
     text-align: right;
 }
+
+button.mat-button.mat-flat-button.mat-warn
+{
+    font-weight: 500;
+    font-size: 16px;
+    min-width: 150px;
+    height: 45px;
+    margin-right: 20px;
+    float: left;
+}
