--- a/src/app/sales-order/sales-order.component.html
+++ b/src/app/sales-order/sales-order.component.html
@@ -1,131 +1,191 @@
-
 <div class="page-content">
-    <mat-drawer-container class="sidebar-container">
-        <mat-drawer mode="side" opened>
-          
-          <div class="side-menus">
-              <button mat-button [routerLink]="['dashboard']" class="active"><mat-icon>home</mat-icon> Home</button>
-              <button mat-button [routerLink]="['/reports']"><mat-icon>assessment</mat-icon> Reports</button>
-              <button mat-button [routerLink]="['/sales-order']"><mat-icon>shopping_basket</mat-icon> Sales Order</button>
-              <button mat-button [routerLink]="['/pricing']"><mat-icon>monetization_on</mat-icon> Pricing</button>
-              <button mat-button [routerLink]="['/pricing']"><mat-icon>layers</mat-icon> Services</button>
-              <button mat-button [routerLink]=""><mat-icon>perm_contact_calendar</mat-icon> Users Management</button> 
-              <button mat-button [routerLink]=""><mat-icon>card_travel</mat-icon> Assets Management</button> 
-          </div>
-    
-        </mat-drawer>
-        <mat-drawer-content>
-            <div class="sales-order-data content-slide">
-                <div class="row-title"><div class="left-top page-title half-top-div">CIU Details</div><div class="left-top page-breadcrumb half-top-div"><span class="bCrumbs"><span>Home</span> / <span>Home</span></span></div></div>
-                  <mat-horizontal-stepper [linear]="isLinear" #stepper>
-                    <mat-step>
-                      <form class="sales-forms">
-                        <ng-template matStepLabel>CIU Details</ng-template>
-                        <div class="half-inputs">
-                            <mat-form-field class="half-input-div float-left">
-                              
-                                    <mat-select placeholder="Country">
-                                      <mat-option value="option1">Option 1</mat-option>
-                                      <mat-option value="option2">Option 2</mat-option>
-                                      <mat-option value="option3">Option 3</mat-option>
-                                    </mat-select>
-                             
-                            </mat-form-field>
-                            <mat-form-field class="half-input-div float-right">
-                                <mat-select placeholder="Region">
-                                    <mat-option value="option1">Option 1</mat-option>
-                                    <mat-option value="option2">Option 2</mat-option>
-                                    <mat-option value="option3">Option 3</mat-option>
-                                  </mat-select>
-                            </mat-form-field>
+  <mat-drawer-container class="sidebar-container">
+    <mat-drawer mode="side" opened>
+      <div class="side-menus">
+        <button mat-button [routerLink]="['dashboard']" class="active">
+          <mat-icon>home</mat-icon>
+          Home
+        </button>
+        <button mat-button [routerLink]="['/reports']">
+          <mat-icon>assessment</mat-icon>
+          Reports
+        </button>
+        <button mat-button [routerLink]="['/sales-order']">
+          <mat-icon>shopping_basket</mat-icon>
+          Sales Order
+        </button>
+        <button mat-button [routerLink]="['/pricing']">
+          <mat-icon>monetization_on</mat-icon>
+          Pricing
+        </button>
+        <button mat-button [routerLink]="['/pricing']">
+          <mat-icon>layers</mat-icon>
+          Services
+        </button>
+        <button mat-button [routerLink]="">
+          <mat-icon>perm_contact_calendar</mat-icon>
+          Users Management
+        </button>
+        <button mat-button [routerLink]="">
+          <mat-icon>card_travel</mat-icon>
+          Assets Management
+        </button>
+      </div>
+    </mat-drawer>
+    <mat-drawer-content>
+      <div class="sales-order-data content-slide">
+        <div class="row-title">
+          <div class="left-top page-title half-top-div">Sales Order</div>
+          <div class="left-top page-breadcrumb half-top-div"><span class="bCrumbs"><span>Home</span> / <span class="active-bCrumbs">Sales Order</span></span></div>
+        </div>
+        <mat-horizontal-stepper [linear]="isLinear" #stepper>
+        <mat-step>
+          <form class="sales-forms">
+            <ng-template matStepLabel>CIU Details</ng-template>
+            <div class="half-inputs">
+              <mat-form-field class="half-input-div float-left">
+                <mat-select placeholder="Country">
+                  <mat-option value="option1">Option 1</mat-option>
+                  <mat-option value="option2">Option 2</mat-option>
+                  <mat-option value="option3">Option 3</mat-option>
+                </mat-select>
+              </mat-form-field>
+              <mat-form-field class="half-input-div float-right">
+                <mat-select placeholder="Region">
+                  <mat-option value="option1">Option 1</mat-option>
+                  <mat-option value="option2">Option 2</mat-option>
+                  <mat-option value="option3">Option 3</mat-option>
+                </mat-select>
+              </mat-form-field>
+              <mat-form-field class="half-input-div float-left">
+                <input matInput placeholder="CIU Name" type="text" name="ciuname" required>
+              </mat-form-field>
+              <mat-form-field class="half-input-div float-right">
+                <input class="" matInput placeholder="CIU Type" type="text" name="ciutype" required>
+              </mat-form-field>
+            </div>
+            <div class="mat-btn-group">
+              <button mat-button matStepperNext mat-flat-button>Next</button>
+              <button mat-button mat-flat-button class="float-left-align-btn mr-20">Bulk Upload <mat-icon class="ml-5">cloud_upload</mat-icon></button>
+            </div>
+          </form>
+        </mat-step>
+        <mat-step>
+          <form class="sales-forms">
+            <ng-template matStepLabel>Sales order details</ng-template>
+            <div class="mat-btn-group sales-order-group">
+              <!-- <button mat-button (click)="openDialog()">Open dialog</button> -->
+              <button class="add-more-sales common-sales-btn" mat-button matStepperNext mat-flat-button>
+                Add More 
+                <mat-icon>add</mat-icon>
+              </button>
+            </div>
+            <table mat-table [dataSource]="dataSource" matSort >
+              <ng-container matColumnDef="pidinputTitle">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> PID </th>
+                <td mat-cell *matCellDef="let element"> {{element.pidinput}} </td>
+              </ng-container>
+              <ng-container matColumnDef="quantityTitle">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Quantity </th>
+                <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
+              </ng-container>
+              <ng-container matColumnDef="actions">
+                <th mat-header-cell *matHeaderCellDef> Actions </th>
+                <td mat-cell *matCellDef="let element">
+                  <!-- <button mat-icon-button color="accent" (click)="redirectToUpdate(element.id)">
+                    <mat-icon class="mat-18">system_update</mat-icon>
+                    </button> -->
+                  <button mat-icon-button color="primary">
+                    <mat-icon class="mat-18">mode_edit</mat-icon>
+                  </button>
+                  <button mat-icon-button color="warn">
+                    <mat-icon class="mat-18">delete</mat-icon>
+                  </button>
+                </td>
+              </ng-container>
+              <!-- <ng-container matColumnDef="delete">
+                <th mat-header-cell *matHeaderCellDef> Delete </th>
+                <td mat-cell *matCellDef="let element">
+                  <button mat-icon-button color="warn" (click)="redirectToDelete(element.id)">
+                      <mat-icon class="mat-18">delete</mat-icon>
+                  </button>
+                </td>
+                </ng-container> -->
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+          </form>
+        </mat-step>
+        <mat-step> 
+          <form class="sales-forms">
+            <ng-template matStepLabel>Base expension</ng-template>
+            <div class="half-inputs">
+              <mat-form-field class="half-input-div float-left">
+                <input matInput placeholder="Total Server" type="text" name="ttlServer" required>
+              </mat-form-field>
+              <mat-form-field class="half-input-div float-right">
+                <input matInput placeholder="Total CIU Cores" type="text" name="ttlCiuCores" required>
+              </mat-form-field>
+              <mat-form-field class="half-input-div float-left">
+                <input matInput placeholder="Cores Per Server" type="text" name="cPerServer" required>
+              </mat-form-field>
+              <mat-form-field class="half-input-div float-right">
+                <input matInput placeholder="Memory Per Server" type="text" name="memoryPerServer" required>
+              </mat-form-field>
+              <mat-form-field class="half-input-div float-left">
+                <input matInput [matDatepicker]="date1" placeholder="Base Site Survey Date">
+                <mat-datepicker-toggle matSuffix [for]="date1"></mat-datepicker-toggle>
+                <mat-datepicker #date1></mat-datepicker>
+              </mat-form-field>
+              <mat-form-field class="half-input-div float-right">
+                <input matInput [matDatepicker]="date2" placeholder="Base Site Survey Date">
+                <mat-datepicker-toggle matSuffix [for]="date2"></mat-datepicker-toggle>
+                <mat-datepicker #date2></mat-datepicker>
+              </mat-form-field>
+              <mat-form-field class="half-input-div float-left">
+                <input matInput [matDatepicker]="date3" placeholder="Base Site Survey Date">
+                <mat-datepicker-toggle matSuffix [for]="date3"></mat-datepicker-toggle>
+                <mat-datepicker #date3></mat-datepicker>
+              </mat-form-field>
+              <mat-form-field class="half-input-div float-right">
+                <input matInput [matDatepicker]="date4" placeholder="Base Site Survey Date">
+                <mat-datepicker-toggle matSuffix [for]="date4"></mat-datepicker-toggle>
+                <mat-datepicker #date4></mat-datepicker>
+              </mat-form-field>
+              <mat-form-field class="half-input-div float-left">
+                <input matInput [matDatepicker]="date5" placeholder="Base Site Survey Date">
+                <mat-datepicker-toggle matSuffix [for]="date5"></mat-datepicker-toggle>
+                <mat-datepicker #date5></mat-datepicker>
+              </mat-form-field>
+              <mat-form-field class="half-input-div float-right">
+                <input matInput [matDatepicker]="date6" placeholder="Base Site Survey Date">
+                <mat-datepicker-toggle matSuffix [for]="date6"></mat-datepicker-toggle>
+                <mat-datepicker #date6></mat-datepicker>
+              </mat-form-field>
+              <mat-form-field class="half-input-div float-left">
+                <input matInput [matDatepicker]="date7" placeholder="Base Site Survey Date">
+                <mat-datepicker-toggle matSuffix [for]="date7"></mat-datepicker-toggle>
+                <mat-datepicker #date7></mat-datepicker>
+              </mat-form-field>
 
+            </div>
+              <div class="mat-btn-group">
+                <button mat-button mat-flat-button>Save</button>
+                <button mat-button mat-flat-button color="warn" (click)="stepper.reset()">Cancel</button>
+              </div>
+          </form>
+          <!-- <ng-template matStepLabel>Base expension</ng-template>
+            You are now done. -->
+          <!-- <div>
+            <button mat-button matStepperPrevious>Back</button>
+            <button mat-button (click)="stepper.reset()">Reset</button>
+            </div> -->
+        </mat-step>
+        </mat-horizontal-stepper>
+        </div>
+    </mat-drawer-content>
+  </mat-drawer-container>
+</div>
 
-                        <mat-form-field class="half-input-div float-left">
-                            <input matInput placeholder="CIU Name" type="text" name="ciuname" required>
-                        </mat-form-field>
-                        <mat-form-field class="half-input-div float-right">
-                            <input class="" matInput placeholder="CIU Type" type="text" name="ciutype" required>
-                        </mat-form-field>
-                        </div>
-                        <div class="mat-btn-group">
-                          <button mat-button matStepperNext mat-flat-button>Next</button>
-                        </div>
-                      </form>
-                    </mat-step>
-                    <mat-step>
-                      <form class="sales-forms">
-                          <ng-template matStepLabel>Sales order details</ng-template>
-                          <div class="mat-btn-group sales-order-group">
-                              <!-- <button mat-button (click)="openDialog()">Open dialog</button> -->
-                              <button class="add-more-sales common-sales-btn" mat-button matStepperNext mat-flat-button>Add More <mat-icon>add</mat-icon></button>
-                            </div>
-                          <table mat-table [dataSource]="dataSource" matSort >
-                              <ng-container matColumnDef="pidinputTitle">
-                                <th mat-header-cell *matHeaderCellDef mat-sort-header> PID </th>
-                                <td mat-cell *matCellDef="let element"> {{element.pidinput}} </td>
-                              </ng-container>
-                             
-                              <ng-container matColumnDef="quantityTitle">
-                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Quantity </th>
-                                <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
-                              </ng-container>
-                             
-               
-                              <ng-container matColumnDef="actions">
-                                  <th mat-header-cell *matHeaderCellDef> Actions </th>
-                                  <td mat-cell *matCellDef="let element">
-                                    <!-- <button mat-icon-button color="accent" (click)="redirectToUpdate(element.id)">
-                                        <mat-icon class="mat-18">system_update</mat-icon>
-                                    </button> -->
-                                    <button mat-icon-button color="primary">
-                                        <mat-icon class="mat-18">mode_edit</mat-icon>
-                                    </button>
-                                    <button mat-icon-button color="warn">
-                                        <mat-icon class="mat-18">delete</mat-icon>
-                                    </button>
-                                  </td>
-                                </ng-container>
-                             
-                                <!-- <ng-container matColumnDef="delete">
-                                    <th mat-header-cell *matHeaderCellDef> Delete </th>
-                                    <td mat-cell *matCellDef="let element">
-                                      <button mat-icon-button color="warn" (click)="redirectToDelete(element.id)">
-                                          <mat-icon class="mat-18">delete</mat-icon>
-                                      </button>
-                                    </td>
-                                  </ng-container> -->
-                             
-                              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                            </table>
-                            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-                      </form>
-                    </mat-step>
-                    <mat-step>
-
-                        <form class="sales-forms">
-                            <ng-template matStepLabel>Base expension</ng-template>
-                            <mat-form-field>
-                              <input matInput placeholder="Address" required>
-                            </mat-form-field>
-                            <div>
-                              <button mat-button matStepperPrevious>Back</button>
-                              <button mat-button matStepperNext>Next</button>
-                            </div>
-                          </form>
-
-                      <ng-template matStepLabel>Base expension</ng-template>
-                      You are now done.
-                      <div>
-                        <button mat-button matStepperPrevious>Back</button>
-                        <button mat-button (click)="stepper.reset()">Reset</button>
-                      </div>
-                    </mat-step>
-                  </mat-horizontal-stepper>
-                  
-    </div>
-  </mat-drawer-content>
-      </mat-drawer-container>
-    </div>
-    
-    
+  
