--- a/src/app/shared/common-dialog/common-dialog.component.html
+++ b/src/app/shared/common-dialog/common-dialog.component.html
@@ -5,8 +5,8 @@
 		<div class="mdl-dialog__content confirmation-dialog" [innerHTML]="data.msgBody">
 		</div>
 		<div class="mdl-dialog__actions">
-			<button *ngIf=showOk mat-button class="btn btn--primary"  (click)="confirm()">{{showMsg?'Close':'Ok'}}</button>
-		 	<button *ngIf=showCancel mat-button class="btn-dark"   (click)="cancel()">Cancel</button>
-		</div>
+			<button *ngIf=showOk mat-flat-button class="btn btn--primary"  (click)="confirm()">{{showMsg?'Close':'Ok'}}</button>
+		 	<button *ngIf=showCancel  mat-button mat-flat-button color="warn"   (click)="cancel()">Cancel</button>
+		</div> 
 	</div>
 </div>
