--- a/src/app/assets-management/page/assets-management.component.html
+++ b/src/app/assets-management/page/assets-management.component.html
@@ -1,43 +1,136 @@
-
-  <div class="mat-elevation-z8">
-      <div class="mdl-cell-align-right mdl-cell--3-col">
-          <button class="button" mat-flat-button  matTooltip="Add" (click)="openDialog(true)">Add Assets</button>
+<div class="page-content">
+    <mat-drawer-container class="sidebar-container">
+      <mat-drawer mode="side" opened>
+        <div class="side-menus">
+          <button mat-button [routerLink]="['dashboard']" class="active"><mat-icon>home</mat-icon>
+            Home</button>
+          <button mat-button [routerLink]="['/reports']"><mat-icon>assessment</mat-icon>
+            Reports</button>
+          <button mat-button [routerLink]="['/sales-order']"><mat-icon>shopping_basket</mat-icon>
+            Sales Order</button>
+          <button mat-button [routerLink]="['/pricing']"><mat-icon>monetization_on</mat-icon>
+            Pricing</button>
+          <button mat-button [routerLink]="['/order-summary']"><mat-icon>list</mat-icon>
+            Order Summary</button>
+          <button mat-button [routerLink]=""><mat-icon>layers</mat-icon> Invoice</button>
+          <button mat-button [routerLink]="['/admin']"><mat-icon>perm_contact_calendar</mat-icon>
+            Users Management</button>
+          <button mat-button [routerLink]="['/assets-management']"><mat-icon>card_travel</mat-icon>
+            Assets Management</button>
         </div>
-      <table mat-table [dataSource]="dataSource" matSort>
-    
-        <!-- Position Column -->
-        <ng-container matColumnDef="PID">
-          <th mat-header-cell *matHeaderCellDef  mat-sort-header> PID </th>
-          <td mat-cell *matCellDef="let element"> {{element.pid}} </td>
-        </ng-container>
-    
-        <!-- Name Column -->
-        <ng-container matColumnDef="AssetsName">
-          <th mat-header-cell *matHeaderCellDef  mat-sort-header> Assets Name </th>
-          <td mat-cell *matCellDef="let element"> {{element.assetsName}} </td>
-        </ng-container>
+      </mat-drawer>
+      <mat-drawer-content>
+        <div class="pricing-data content-slide">
+          <div class="row-title">
+            <div class="left-top page-title half-top-div">Assets Management</div>
+            <div class="left-top page-breadcrumb half-top-div"><span
+                class="bCrumbs"><span>Home</span> / <span class="active-bCrumbs">Assets Management</span></span></div>
+          </div>
 
-        <ng-container matColumnDef="edit">
-            <th mat-header-cell *matHeaderCellDef> Edit </th>
-            <td mat-cell *matCellDef="let element">
-              <button mat-icon-button color="accent" (click)="editAssets(element)">
-                  <mat-icon class="mat-18">edit</mat-icon>
-              </button>
-            </td>
-          </ng-container>
-       
-          <ng-container matColumnDef="delete">
-              <th mat-header-cell *matHeaderCellDef> Delete </th>
-              <td mat-cell *matCellDef="let element">
-                <button mat-icon-button color="warn" (click)="deleteAssets(element)">
-                    <mat-icon class="mat-18">delete</mat-icon>
-                </button>
-              </td>
-            </ng-container>
-    
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    
-      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-    </div>
+          <mat-card>
+            <div class="head-area mat-card-top"> 
+              <!-- <button class="button"
+                mat-flat-button matTooltip="Add" (click)="openDialog(true)">Add
+                Price</button> -->
+                <button class="button" mat-flat-button matTooltip="Add"
+                (click)="openDialog(true)">Add Assets</button>
+              </div>
+                <table mat-table [dataSource]="dataSource" matSort>
+
+                    <!-- Position Column -->
+                    <ng-container matColumnDef="PID">
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header> PID </th>
+                      <td mat-cell *matCellDef="let element"> {{element.pid}} </td>
+                    </ng-container>
+                
+                    <!-- Name Column -->
+                    <ng-container matColumnDef="AssetsName">
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header> Assets Name </th>
+                      <td mat-cell *matCellDef="let element"> {{element.assetsName}} </td>
+                    </ng-container>
+                
+                    <ng-container matColumnDef="edit">
+                      <th mat-header-cell *matHeaderCellDef> Edit </th>
+                      <td mat-cell *matCellDef="let element">
+                        <button mat-icon-button color="accent" (click)="editAssets(element)">
+                          <mat-icon class="mat-18">edit</mat-icon>
+                        </button>
+                      </td>
+                    </ng-container>
+                
+                    <ng-container matColumnDef="delete">
+                      <th mat-header-cell *matHeaderCellDef> Delete </th>
+                      <td mat-cell *matCellDef="let element">
+                        <button mat-icon-button color="warn" (click)="deleteAssets(element)">
+                          <mat-icon class="mat-18">delete</mat-icon>
+                        </button>
+                      </td>
+                    </ng-container>
+                
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                  </table>
+                
+                  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+          </mat-card>
+  
+        </div>
+      </mat-drawer-content>
+    </mat-drawer-container>
+  </div>
+  
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
+<div class="mat-elevation-z8">
+  <div class="mdl-cell-align-right mdl-cell--3-col">
+    <button class="button" mat-flat-button matTooltip="Add"
+      (click)="openDialog(true)">Add Assets</button>
+  </div>
+  <table mat-table [dataSource]="dataSource" matSort>
+
+  
+    <ng-container matColumnDef="PID">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> PID </th>
+      <td mat-cell *matCellDef="let element"> {{element.pid}} </td>
+    </ng-container>
+
+
+    <ng-container matColumnDef="AssetsName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Assets Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.assetsName}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="edit">
+      <th mat-header-cell *matHeaderCellDef> Edit </th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button color="accent" (click)="editAssets(element)">
+          <mat-icon class="mat-18">edit</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef> Delete </th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button color="warn" (click)="deleteAssets(element)">
+          <mat-icon class="mat-18">delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+</div> -->
