--- a/src/app/pricing/page/pricing.component.html
+++ b/src/app/pricing/page/pricing.component.html
@@ -1,73 +1,122 @@
-<div class="mat-elevation-z8">
-  <div class="mdl-cell-align-right mdl-cell--3-col">
-    <button class="button" mat-flat-button matTooltip="Add" (click)="openDialog(true)">Add Price</button>
-  </div>
-  <table mat-table [dataSource]="dataSource" matSort>
-
-    <!-- Position Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-    </ng-container>
-
-    <!-- Name Column -->
-    <ng-container matColumnDef="ciuType">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> CIU Type </th>
-      <td mat-cell *matCellDef="let element"> {{element.ciuType}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="countryName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Country Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.countryName}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="minCore">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Min Core </th>
-      <td mat-cell *matCellDef="let element"> {{element.minCore}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="maxCore">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Max Core </th>
-      <td mat-cell *matCellDef="let element"> {{element.maxCore}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="price">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
-      <td mat-cell *matCellDef="let element"> {{element.price}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="effectiveFrom">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Effective From</th>
-      <td mat-cell *matCellDef="let element"> {{element.effectiveFrom}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="effectiveTo">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Effective To</th>
-      <td mat-cell *matCellDef="let element"> {{element.effectiveTo}} </td>
-    </ng-container>
+<div class="page-content">
+  <mat-drawer-container class="sidebar-container">
+    <mat-drawer mode="side" opened>
+      <div class="side-menus">
+        <button mat-button [routerLink]="['dashboard']" class="active"><mat-icon>home</mat-icon>
+          Home</button>
+        <button mat-button [routerLink]="['/reports']"><mat-icon>assessment</mat-icon>
+          Reports</button>
+        <button mat-button [routerLink]="['/sales-order']"><mat-icon>shopping_basket</mat-icon>
+          Sales Order</button>
+        <button mat-button [routerLink]="['/pricing']"><mat-icon>monetization_on</mat-icon>
+          Pricing</button>
+        <button mat-button [routerLink]="['/order-summary']"><mat-icon>list</mat-icon>
+          Order Summary</button>
+        <button mat-button [routerLink]=""><mat-icon>layers</mat-icon> Invoice</button>
+        <button mat-button [routerLink]="['/admin']"><mat-icon>perm_contact_calendar</mat-icon>
+          Users Management</button>
+        <button mat-button [routerLink]="['/assets-management']"><mat-icon>card_travel</mat-icon>
+          Assets Management</button>
+      </div>
+    </mat-drawer>
+    <mat-drawer-content>
+      <div class="pricing-data content-slide">
+        <div class="row-title">
+          <div class="left-top page-title half-top-div">Pricing</div>
+          <div class="left-top page-breadcrumb half-top-div"><span
+              class="bCrumbs"><span>Home</span> / <span class="active-bCrumbs">Pricing</span></span></div>
+        </div>
 
 
-    <ng-container matColumnDef="edit">
-      <th mat-header-cell *matHeaderCellDef> Edit </th>
-      <td mat-cell *matCellDef="let element">
-        <button mat-icon-button color="accent" (click)="editPricing(element)">
-          <mat-icon class="mat-18">edit</mat-icon>
-        </button>
-      </td>
-    </ng-container>
+        <!-- <div class="mat-elevation-z8"></div> -->
+        <mat-card>
+          <!-- <div class="mdl-cell-align-right mdl-cell--3-col">
+     
+    </div> -->
+          <div class="head-area mat-card-top"> <button class="button"
+              mat-flat-button matTooltip="Add" (click)="openDialog(true)">Add
+              Price</button></div>
+          <table mat-table [dataSource]="dataSource" matSort>
 
-    <ng-container matColumnDef="delete">
-      <th mat-header-cell *matHeaderCellDef> Delete </th>
-      <td mat-cell *matCellDef="let element">
-        <button mat-icon-button color="warn" (click)="deletePrice(element)">
-          <mat-icon class="mat-18">delete</mat-icon>
-        </button>
-      </td>
-    </ng-container>
+            <!-- Position Column -->
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+              <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+            </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+            <!-- Name Column -->
+            <ng-container matColumnDef="ciuType">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> CIU Type
+              </th>
+              <td mat-cell *matCellDef="let element"> {{element.ciuType}} </td>
+            </ng-container>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+            <ng-container matColumnDef="countryName">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Country
+                Name </th>
+              <td mat-cell *matCellDef="let element"> {{element.countryName}}
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="minCore">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Min Core
+              </th>
+              <td mat-cell *matCellDef="let element"> {{element.minCore}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="maxCore">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Max Core
+              </th>
+              <td mat-cell *matCellDef="let element"> {{element.maxCore}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="price">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
+              <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="effectiveFrom">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>Effective
+                From</th>
+              <td mat-cell *matCellDef="let element"> {{element.effectiveFrom}}
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="effectiveTo">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>Effective To</th>
+              <td mat-cell *matCellDef="let element"> {{element.effectiveTo}}
+              </td>
+            </ng-container>
+
+
+            <ng-container matColumnDef="edit">
+              <th mat-header-cell *matHeaderCellDef> Edit </th>
+              <td mat-cell *matCellDef="let element">
+                <button mat-icon-button color="accent"
+                  (click)="editPricing(element)">
+                  <mat-icon class="mat-18">edit</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="delete">
+              <th mat-header-cell *matHeaderCellDef> Delete </th>
+              <td mat-cell *matCellDef="let element">
+                <button mat-icon-button color="warn"
+                  (click)="deletePrice(element)">
+                  <mat-icon class="mat-18">delete</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
+
+          <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        </mat-card>
+
+      </div>
+    </mat-drawer-content>
+  </mat-drawer-container>
 </div>
