--- a/src/app/sales-order/sales-order.component.css
+++ b/src/app/sales-order/sales-order.component.css
@@ -7,7 +7,7 @@ table {
 }
  
 th.mat-header-cell {
-    text-align: left;
+
     max-width: 300px;
     width: 35%;
 }
@@ -16,13 +16,13 @@ table.mat-table {
     border: 1px solid #e0e0e0;
 }
 
-td.mat-cell, td.mat-footer-cell, th.mat-header-cell {
+/* td.mat-cell, td.mat-footer-cell, th.mat-header-cell {
     border-bottom-width: 1px;
     border-bottom-style: solid;
     border-right: 1px solid #e0e0e0;
     text-align: center;
     padding: 0px!important;
-}
+} */
 
 button.mat-sort-header-button
 {
