--- a/src/app/reports/page/reports.component.html
+++ b/src/app/reports/page/reports.component.html
@@ -83,9 +83,38 @@
  
               <mat-card>
 
-                <!-- <div class="head-area mat-card-top"> <button class="button"
-                    mat-flat-button matTooltip="Add" (click)="openDialog(true)">Add
-                    Price</button></div> -->
+
+                  <mat-list role="list" class="report-filters">
+                      <mat-list-item role="listitem" class="date-title equal-filter">Dec 2019 - Mar 2019</mat-list-item>
+                      <mat-list-item role="listitem" class="filter-select equal-filter">
+                          <mat-form-field>
+                              <mat-select placeholder="Date Range">
+                                <mat-option>Japan</mat-option>
+                                <mat-option>Chine</mat-option>
+                                <mat-option>India</mat-option>
+                              </mat-select>
+                            </mat-form-field> 
+                      </mat-list-item>
+                      <mat-list-item role="listitem" class="filter-select equal-filter">
+                          <mat-form-field>
+                              <mat-select placeholder="Data Center">
+                                <mat-option>Japan</mat-option>
+                                <mat-option>Chine</mat-option>
+                                <mat-option>India</mat-option>
+                              </mat-select>
+                            </mat-form-field>
+                      </mat-list-item>
+                      <mat-list-item role="listitem" class="filter-select equal-filter">
+                          <mat-form-field>
+                              <mat-select placeholder="Service Type">
+                                <mat-option>Optional</mat-option>
+                                <mat-option>Permanent</mat-option>
+                                <mat-option>Contartact</mat-option>
+                              </mat-select>
+                            </mat-form-field>
+                      </mat-list-item>
+                    </mat-list>
+
                 <table mat-table [dataSource]="dataSource" matSort>
       
                   <!-- Position Column -->
@@ -95,51 +124,34 @@
                   </ng-container>
       
                   <!-- Name Column -->
-                  <ng-container matColumnDef="ciuType">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> CIU Type
-                    </th>
-                    <td mat-cell *matCellDef="let element"> {{element.ciuType}} </td>
-                  </ng-container>
+
       
                   <ng-container matColumnDef="countryName">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Country
-                      Name </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Country</th>
                     <td mat-cell *matCellDef="let element"> {{element.countryName}}
                     </td>
                   </ng-container>
       
-                  <ng-container matColumnDef="minCore">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Min Core
+                  <ng-container matColumnDef="items">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Items
                     </th>
-                    <td mat-cell *matCellDef="let element"> {{element.minCore}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.items}} </td>
                   </ng-container>
       
-                  <ng-container matColumnDef="maxCore">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Max Core
-                    </th>
-                    <td mat-cell *matCellDef="let element"> {{element.maxCore}} </td>
+                  <ng-container matColumnDef="quantity">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Quantity</th>
+                    <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
                   </ng-container>
       
-                  <ng-container matColumnDef="price">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
-                    <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+                  <ng-container matColumnDef="ramp">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Ramp</th>
+                    <td mat-cell *matCellDef="let element"> {{element.ramp}} </td>
                   </ng-container>
       
-                  <ng-container matColumnDef="effectiveFrom">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Effective
-                      From</th>
-                    <td mat-cell *matCellDef="let element"> {{element.effectiveFrom}}
-                    </td>
-                  </ng-container>
-      
-                  <ng-container matColumnDef="effectiveTo">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Effective To</th>
-                    <td mat-cell *matCellDef="let element"> {{element.effectiveTo}}
-                    </td>
-                  </ng-container>
+                
       
       
-                  <ng-container matColumnDef="edit">
+                  <!-- <ng-container matColumnDef="edit">
                     <th mat-header-cell *matHeaderCellDef> Edit </th>
                     <td mat-cell *matCellDef="let element">
                       <button mat-icon-button color="accent"
@@ -157,13 +169,20 @@
                         <mat-icon class="mat-18">delete</mat-icon>
                       </button>
                     </td>
-                  </ng-container>
+                  </ng-container> -->
       
                   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                 </table>
       
                 <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+
+                <mat-list role="list" class="report-totals">
+                    <mat-list-item role="listitem" class="left total-wrap">Total Sale = <span class="right">$297656</span></mat-list-item>
+                    <mat-list-item role="listitem" class="right total-wrap">Global Sale = <span class="right">$297656</span></mat-list-item>
+                  </mat-list>
+              
+
               </mat-card>
       
             </div>
