Changes according feedback and sales order table sorting

--- a/src/app/common/footer/footer.component.css
+++ b/src/app/common/footer/footer.component.css
@@ -31,5 +31,8 @@ img.foot-logo{
 
 .right-foot.half-div mat-icon
 {
-vertical-align: middle;
+    vertical-align: middle;
+    width: 25px;
+    font-size: 21px;
+    height: initial;
 }
