--- a/src/app/pricing/page/pricing.component.html
+++ b/src/app/pricing/page/pricing.component.html
@@ -1,23 +1,23 @@
 <div class="page-content">
   <mat-drawer-container class="sidebar-container">
     <mat-drawer mode="side" opened>
-      <div class="side-menus">
-        <button mat-button [routerLink]="['dashboard']" class="active"><mat-icon>home</mat-icon>
-          Home</button>
-        <button mat-button [routerLink]="['/reports']"><mat-icon>assessment</mat-icon>
-          Reports</button>
-        <button mat-button [routerLink]="['/sales-order']"><mat-icon>shopping_basket</mat-icon>
-          Sales Order</button>
-        <button mat-button [routerLink]="['/pricing']"><mat-icon>monetization_on</mat-icon>
-          Pricing</button>
-        <button mat-button [routerLink]="['/order-summary']"><mat-icon>list</mat-icon>
-          Order Summary</button>
-        <button mat-button [routerLink]=""><mat-icon>layers</mat-icon> Invoice</button>
-        <button mat-button [routerLink]="['/admin']"><mat-icon>perm_contact_calendar</mat-icon>
-          Users Management</button>
-        <button mat-button [routerLink]="['/assets-management']"><mat-icon>card_travel</mat-icon>
-          Assets Management</button>
-      </div>
+        <div class="side-menus">
+            <button mat-button [routerLink]="['/dashboard']" class="active"><mat-icon>home</mat-icon>
+              Home</button>
+              <button mat-button [routerLink]="['/sales-order']"><mat-icon>shopping_basket</mat-icon>
+                CIU</button>
+            <button mat-button [routerLink]="['/reports']"><mat-icon>assessment</mat-icon>
+              Reports</button>
+            <button mat-button [routerLink]="['/pricing']"><mat-icon>monetization_on</mat-icon>
+              Pricing</button>
+            <!-- <button mat-button [routerLink]="['/order-summary']"><mat-icon>list</mat-icon>
+              Order Summary</button>
+            <button mat-button [routerLink]=""><mat-icon>layers</mat-icon> Invoice</button> -->
+            <button mat-button [routerLink]="['/admin']"><mat-icon>perm_contact_calendar</mat-icon>
+              Users Management</button>
+            <button mat-button [routerLink]="['/assets-management']"><mat-icon>card_travel</mat-icon>
+              Assets Management</button>
+          </div>
     </mat-drawer> 
     <mat-drawer-content>
       <div class="pricing-data content-slide">
