--- a/src/app/reports/page/reports.component.css
+++ b/src/app/reports/page/reports.component.css
@@ -9,11 +9,18 @@ tr.mat-header-row.ng-star-inserted {
     line-height: initial !important;
     color: rgb(255, 255, 255) !important;
     transform: translateY(0px);
-    opacity: 1;
+    opacity: 1; 
 } */
 
 .mat-sort-header-container {
     line-height: 11px;
+}
+
+.mda-responsive
+{
+    display: inline-block;
+    width: 100%;
+    overflow: auto;
 }
 
 
@@ -51,7 +58,7 @@ tr.mat-header-row.ng-star-inserted th.mat-header-cell
 
 .equal-filter {
     display: inline-flex;
-    width: 25%;
+    width: 22%;
     text-align: center;
     vertical-align: middle;
     align-items: center;
@@ -59,7 +66,7 @@ tr.mat-header-row.ng-star-inserted th.mat-header-cell
 
 .equal-filter .mat-form-field
 {
-    width: 88%;
+    width: 82%;
     /* margin: 15px auto!important; */
     background: #ebebeb;
     padding: 5px 10px!important;
@@ -70,4 +77,30 @@ tr.mat-header-row.ng-star-inserted th.mat-header-cell
     color: #6a6a6a;
     font-size: 18px;
     font-weight: 400;
+    min-width: 180px;
 }
+
+@media(min-width:1199px)
+{
+    .equal-filter
+    {
+        width: 25%;
+    }
+}
+
+    @media(max-width:991px)
+    {
+        .report-filters
+        {
+            height: initial;
+            padding-bottom: 15px;
+            display: inline-block;
+            text-align: center;
+        }
+
+     .filter-select.equal-filter
+        {
+            display: inline-block;
+            width: 100%;
+        }
+    }
