--- a/src/app/sales-order/sales-order.component.html
+++ b/src/app/sales-order/sales-order.component.html
@@ -2,17 +2,17 @@
   <mat-drawer-container class="sidebar-container">
     <mat-drawer mode="side" opened>
         <div class="side-menus">
-            <button mat-button [routerLink]="['dashboard']" class="active"><mat-icon>home</mat-icon>
+            <button mat-button [routerLink]="['/dashboard']" class="active"><mat-icon>home</mat-icon>
               Home</button>
+              <button mat-button [routerLink]="['/sales-order']"><mat-icon>shopping_basket</mat-icon>
+                CIU</button>
             <button mat-button [routerLink]="['/reports']"><mat-icon>assessment</mat-icon>
               Reports</button>
-            <button mat-button [routerLink]="['/sales-order']"><mat-icon>shopping_basket</mat-icon>
-              Sales Order</button>
             <button mat-button [routerLink]="['/pricing']"><mat-icon>monetization_on</mat-icon>
               Pricing</button>
-            <button mat-button [routerLink]="['/order-summary']"><mat-icon>list</mat-icon>
+            <!-- <button mat-button [routerLink]="['/order-summary']"><mat-icon>list</mat-icon>
               Order Summary</button>
-            <button mat-button [routerLink]=""><mat-icon>layers</mat-icon> Invoice</button>
+            <button mat-button [routerLink]=""><mat-icon>layers</mat-icon> Invoice</button> -->
             <button mat-button [routerLink]="['/admin']"><mat-icon>perm_contact_calendar</mat-icon>
               Users Management</button>
             <button mat-button [routerLink]="['/assets-management']"><mat-icon>card_travel</mat-icon>
@@ -25,6 +25,7 @@
           <div class="left-top page-title half-top-div">Sales Order</div>
           <div class="left-top page-breadcrumb half-top-div"><span class="bCrumbs"><span>Home</span> / <span class="active-bCrumbs">Sales Order</span></span></div>
         </div>
+        
         <mat-horizontal-stepper [linear]="isLinear" #stepper>
         <mat-step>
           <form class="sales-forms">
@@ -67,21 +68,19 @@
                 <mat-icon>add</mat-icon>
               </button>
             </div>
+            
             <table mat-table [dataSource]="dataSource" matSort >
-              <ng-container matColumnDef="pidinputTitle">
+              <ng-container matColumnDef="pidinput">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> PID </th>
                 <td mat-cell *matCellDef="let element"> {{element.pidinput}} </td>
               </ng-container>
-              <ng-container matColumnDef="quantityTitle">
+              <ng-container matColumnDef="quantity">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Quantity </th>
                 <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
               </ng-container>
               <ng-container matColumnDef="actions">
                 <th mat-header-cell *matHeaderCellDef> Actions </th>
                 <td mat-cell *matCellDef="let element">
-                  <!-- <button mat-icon-button color="accent" (click)="redirectToUpdate(element.id)">
-                    <mat-icon class="mat-18">system_update</mat-icon>
-                    </button> -->
                   <button mat-icon-button color="primary">
                     <mat-icon class="mat-18">mode_edit</mat-icon>
                   </button>
@@ -90,14 +89,6 @@
                   </button>
                 </td>
               </ng-container>
-              <!-- <ng-container matColumnDef="delete">
-                <th mat-header-cell *matHeaderCellDef> Delete </th>
-                <td mat-cell *matCellDef="let element">
-                  <button mat-icon-button color="warn" (click)="redirectToDelete(element.id)">
-                      <mat-icon class="mat-18">delete</mat-icon>
-                  </button>
-                </td>
-                </ng-container> -->
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
