--- a/src/styles.css
+++ b/src/styles.css
@@ -149,6 +149,17 @@ border-right: 2px solid #01bceb;
 
 /* ----- Components CSS --- */
 
+
+
+span.close-poper .mat-icon {
+    float: right;
+    color: #f44336;
+    font-size: 25px;
+    cursor: pointer;
+    /* top: -25px; */
+    /* right: -22px; */
+}
+
 button.mat-button.mat-warn
 {
     font-weight: 500;
