sales order to ciu content changes(texts formats)

--- a/src/app/sales-order/sales-order.component.html
+++ b/src/app/sales-order/sales-order.component.html
@@ -22,8 +22,8 @@
     <mat-drawer-content>
       <div class="sales-order-data content-slide">
         <div class="row-title">
-          <div class="left-top page-title half-top-div">Sales Order</div>
-          <div class="left-top page-breadcrumb half-top-div"><span class="bCrumbs"><span>Home</span> / <span class="active-bCrumbs">Sales Order</span></span></div>
+          <div class="left-top page-title half-top-div">CIU</div>
+          <div class="left-top page-breadcrumb half-top-div"><span class="bCrumbs"><span>Home</span> / <span class="active-bCrumbs">CIU</span></span></div>
         </div>
         
         <mat-horizontal-stepper [linear]="isLinear" #stepper>
